# cli

./: .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  brew-formula-template  genformula.py  pyproject.toml  setup.cfg
.github/workflows/: code-standards.yaml  create-release.yaml  gen-brew-formula.yaml  github-actions-test.yaml  pre-commit.yaml  run-tests.yaml  setup.yaml  static-checks.yaml  update-homebrew-formula.yaml
Formula/: upsolver-cli.rb
cli/: config.py  errors.py  formatters.py  main.py  ui.py  upsolver.py  utils.py
cli/commands/: authenticate.py  catalogs.py  clusters.py  configure.py  context.py  execute.py  jobs.py  login.py  root.py  shell.py  tables.py  worksheets.py
cli/dbapi/: README.md  connection.py  cursor.py  exceptions.py  logging_utils.py
cli/shell/: autocomplete.py  highlight.py  shell.py
cli/upsolver/: api.py  api_builder.py  api_utils.py  auth.py  auth_filler.py  catalogs.py  clusters.py  entities.py  jobs.py  lexer.py  lsp.py  poller.py  query.py  raw_entities.py  requester.py  response.py  tables.py  worksheets.py
scripts/: echo-version.py  gen-brew-formula.py  upsolver-cli.rb.template
tests/: mock_upsolver_rest_api.py  test_api_utils.py  test_auth_filler.py  test_authenticate.py  test_cli.py  test_cmd_catalogs.py  test_confman.py  test_formatters.py  test_login.py  test_nested_dict.py  test_query_lexer.py  test_requester.py  test_upsolver_auth.py  test_upsolver_catalogs.py  test_upsolver_query.py
