[tool.poetry]
name = "cli"
version = "0.1.0"
description = "Upsolver's CLI"
authors = ["alexyavo <alex@upsolver.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
prompt-toolkit = "^3.0.24"
Pygments = "^2.10.0"
click = "^8.0.3"
coloredlogs = "^15.0.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pre-commit = "^2.16.0"
flake8 = "^4.0.1"
mypy = "^0.920"
isort = "^5.10.1"
pytest-cov = "^3.0.0"

[tool.isort]
multi_line_output = 3
line_length = 95
include_trailing_comma = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
