[tool.poetry]
name = "upsolver-cli"
version = "0.6.1"
description = "Upsolver's CLI"
authors = ["alexyavo <alex@upsolver.com>"]
license = "MIT"
homepage = "https://github.com/upsolver/cli"
repository = "https://github.com/upsolver/cli"
packages = [
    { include = "cli" }
]

[tool.poetry.scripts]
upsolver = "cli.main:main"

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.0.3"
requests = "^2.27.1"
yarl = "^1.7.2"
tabulate = "^0.8.9"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pre-commit = "^2.16.0"
flake8 = "^4.0.1"
mypy = "^0.920"
isort = "^5.10.1"
pytest-cov = "^3.0.0"
types-requests = "^2.27.3"
pytest-mock = "^3.6.1"
requests-mock = "^1.9.3"
homebrew-pypi-poet = "^0.10.0"
toml = "^0.10.2"

[tool.isort]
multi_line_output = 3
line_length = 95
include_trailing_comma = true

[build-system]
requires = ["setuptools", "poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
